tests/expectations/compiler/dyn_record/dyn_record_cast_as_field_access.out
Error [EPAR0370005]: expected 'record' -- found '='
    --> compiler-test:8:20
     |
   8 |         let d: dyn = t as dyn;
     |                    ^
